# karenina

./: .gitignore  .pre-commit-config.yaml  .testmondata  404.html  Makefile  README.md  RUBRIC_TEST_FIXES_CHECKLIST.md  build-docs.sh  demo_cache_optimization.py  example_benchmark.jsonld  index.html  mkdocs.yml  objects.inv  prd.json  progress.txt  pyproject.toml  sitemap.xml  vulture_whitelist.py
.claude/: ralph-loop.local.md
.claude/commands/: volture.md
.github/workflows/: ci.yml
advanced/: index.html
advanced-adapters/: index.html
advanced-adapters/available-adapters/: index.html
advanced-adapters/mcp-integration/: index.html
advanced-adapters/ports/: index.html
advanced-adapters/writing-adapters/: index.html
advanced-pipeline/: index.html
advanced-pipeline/agentic-evaluation/: index.html
advanced-pipeline/agentic-rubric-evaluation/: index.html
advanced-pipeline/custom-stages/: index.html
advanced-pipeline/deep-judgment-rubrics/: index.html
advanced-pipeline/deep-judgment-templates/: index.html
advanced-pipeline/prompt-assembly/: index.html
advanced-pipeline/stages/: index.html
contributing/: index.html
core_concepts/: index.html
core_concepts/adapters/: index.html
core_concepts/adele/: index.html
core_concepts/evaluation-modes/: index.html
core_concepts/few-shot/: index.html
core_concepts/manual-interface/: index.html
core_concepts/mcp-overview/: index.html
core_concepts/prompt-assembly/: index.html
core_concepts/questions-and-benchmarks/: index.html
core_concepts/results-and-scoring/: index.html
core_concepts/rubrics/: index.html
core_concepts/scenarios/: index.html
core_concepts/task-eval/: index.html
core_concepts/template-vs-rubric/: index.html
data/quickstart/: 002_9db81006203a9703.json  003_c5e167b929bee086.json  004_be98b7c0696e80d8.json  006_3d6c81aa147e306d.json  006_65baea95ed731402.json  007_22bdf6bf07ad0080.json  007_7b15b824a506d7ee.json  010_48119c21327418f6.json  011_25a045816876eb50.json  012_8c26d7cf6b9b3ecd.json  013_8067e58be35d04b9.json  015_8067e58be35d04b9.json  015_aaddd0e07dd6c814.json
data/quickstart-taskeval/: 001_d4df5806ad82cb30.json  006_615cdac520450ee0.json  007_234a74591c3acbde.json  capture_fixtures.py
data/workflow-taskeval/: 004_429927fdbd69fbfa.json  capture_fixtures.py
docs/: about.md  advanced.md  api-reference.md  architecture.md  configuration.md  contributing.md  core-concepts.md  development.md  examples.md  features.md  getting-started.md  index.md  install.md  installation.md  quickstart.md  reference.md  troubleshooting.md  workflows.md
docs/01-introduction/: index.md  philosophy.md  template-vs-rubric.md
docs/02-installation/: index.md
docs/03-configuration/: environment-variables.md  index.md  presets.md  workspace-init.md
docs/04-core-concepts/: adapters.md  adele.md  answer-templates.md  checkpoints.md  evaluation-modes.md  few-shot.md  index.md  mcp-overview.md  template-vs-rubric.md
docs/05-creating-benchmarks/: adding-questions.md  classifying-with-adele.md  creating-checkpoint.md  defining-rubrics.md  few-shot-examples.md  generating-templates.md  index.md  saving-benchmarks.md  writing-templates.md
docs/06-running-verification/: cli.md  database-persistence.md  index.md  loading-benchmark.md  manual-interface.md  mcp-verification.md  multi-model.md  prompt-config.md  python-api.md  response-quality-checks.md  using-presets.md  verification-config.md
docs/07-analyzing-results/: dataframe-analysis.md  exporting.md  index.md  iterating.md  verification-result.md
docs/09-cli-reference/: index.md  init.md  optimize.md  preset.md  serve.md  verify-status.md  verify.md
docs/10-configuration-reference/: env-vars.md  index.md  model-config.md  preset-schema.md  prompt-config.md  verification-config.md
docs/11-advanced-pipeline/: custom-stages.md  deep-judgment-rubrics.md  deep-judgment-templates.md  index.md  prompt-assembly.md  stages.md
docs/12-advanced-adapters/: available-adapters.md  index.md  mcp-integration.md  ports.md  writing-adapters.md
docs/13-contributing/: index.md
docs/_archive/: about.md  api-reference.md  features.md  index.md  quickstart.md  troubleshooting.md
examples/: benchmark_usage.py  checkpoint_usage.py  test_metric_trait.py
getting-started/: index.html
home/: index.html
hooks/: pygments_compat.py
notebooks/: question_access_methods.ipynb  test_checkpoint.jsonld
reference/: index.html
scripts/: capture_fixtures.py  gen_ref_pages.py  migrate_manual_traits.py  sync_and_format_docs_pairs.py
specs/: README.md  SPEC-001-constitution.md  SPEC-002-public-api.md  SPEC-003-execution-model.md  SPEC-004-configuration.md  SPEC-005-failure-observability.md  SPEC-006-durability-interchange.md  SPEC-007-testing-feedback.md  SPEC-008-knowledge-agent-tier.md  SPEC-009-audit-methodology.md  codex_sdk_findings.md  harmonization-master-design.md
tests/: README.md  __init__.py  conftest.py  test_abstention_detection.py  test_abstention_sufficiency_adapter_instructions.py  test_answer_builder.py  test_answer_cache.py  test_answer_cache_preserves_trace.py  test_answer_class_renaming.py  test_answer_generator.py  test_answer_reader.py  test_answer_source_code.py  test_answer_template_class_support.py  test_async_utils.py  test_attribute_extraction.py  test_benchmark.py  test_benchmark_add_question_refactor.py  test_benchmark_extend_judgment.py  test_benchmark_extend_rubric.py  test_benchmark_extend_template.py  test_benchmark_question_integration.py  test_benchmark_replicates.py  test_benchmark_runner.py  test_benchmark_tab_fixes.py  test_benchmark_template_generation.py  test_benchmark_verification_integration.py  test_benchmark_verifier.py  test_callable_trait.py  test_checkpoint.py  test_checkpoint_schemas.py  test_cli_mcp_config.py  test_cli_utils.py  test_code_parser.py  test_deep_judgment_export.py  test_deep_judgment_integration.py  test_deep_judgment_models.py  test_deep_judgment_parser.py  test_dynamic_rubric.py  test_dynamic_rubric_attachment.py  test_dynamic_rubric_dataframe.py  (+61 more)
workflows/: index.html
(+2117 files in other folders)
